# id3ed-fixes

./: Changelog  Makefile.in  README  README.md  config.h.in  configure  configure.in  id3ed.1  id3ed.cc  misc.cc  misc.h
